--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,9 +33,9 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 quarkus.hibernate-orm.log.sql=true
 
 
-# Configura\u00e7\u00e„o de CORS (Cross-Origin Resource Sharing)
+# Configura\u00e7\u00e√£o de CORS (Cross-Origin Resource Sharing)
 quarkus.http.cors.enabled=true
-quarkus.http.cors.origins=https://laysc.github.io
+quarkus.http.cors.origins=https://fernandaosribeiro1.github.io
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
 quarkus.http.cors.headers=X-Custom-Header,Content-Type,Authorization
 quarkus.http.cors.exposed-headers=Content-Disposition
