--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.properties.file.encoding=UTF-8
 # (SWAGGER UI)
 quarkus.smallrye-openapi.info-title=API de Gerenciamento de Carros
 %dev.quarkus.smallrye-openapi.info-title=API de Gerenciamento de Carros
-%test.quarkus.smallrye-openapi.info-title=Car API 
+%test.quarkus.smallrye-openapi.info-title=Car API 
 quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.open-api-version=3.0.4
 
@@ -24,7 +24,7 @@ quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.theme=
 
 
-# Configura\u00e7\u00e3o do Banco de Dados
+# Configuração do Banco de Dados
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 
@@ -33,8 +33,8 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 quarkus.hibernate-orm.log.sql=true
 
 
-# Configura\u00e7\u00eão de CORS (Cross-Origin Resource Sharing)
-quarkus.http.cors.enabled=true
+# Configuração de CORS (Cross-Origin Resource Sharing)
+quarkus.http.cors=true
 quarkus.http.cors.origins=https://fernandaosribeiro1.github.io
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
 quarkus.http.cors.headers=X-Custom-Header,Content-Type,Authorization
